<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/MovieMania"
        android:layout_width="400dp"
        android:layout_height="89dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="642dp"
        android:background="@color/darkPrimaryColor"
        android:color="@color/primaryColor"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/greenColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/sortButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@color/darkPrimaryColor"
        android:foregroundGravity="top|right"
        app:layout_constraintBottom_toTopOf="@+id/blackWidowImgBtn"
        app:layout_constraintTop_toBottomOf="@+id/MovieMania"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_menu_sort_by_size"
        app:tint="@color/greenColor"
        tools:layout_editor_absoluteX="343dp"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/infiniteImgBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="2dp"
        android:adjustViewBounds="true"
        android:maxWidth="250dp"
        android:maxHeight="250dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/blackWidowImgBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MovieMania"
        app:srcCompat="@drawable/_infinite" />

    <ImageButton
        android:id="@+id/blackWidowImgBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="2dp"
        android:adjustViewBounds="true"
        android:maxWidth="250dp"
        android:maxHeight="250dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/infiniteImgBtn"
        app:layout_constraintTop_toBottomOf="@+id/MovieMania"
        app:srcCompat="@drawable/_black_widow" />

    <ImageButton
        android:id="@+id/suicideSquadImgBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="11dp"
        android:adjustViewBounds="true"
        android:maxWidth="250dp"
        android:maxHeight="250dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/lastMercenaryImgBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/_the_suicide_squad" />

    <ImageButton
        android:id="@+id/lastMercenaryImgBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="3dp"
        android:adjustViewBounds="true"
        android:maxWidth="250dp"
        android:maxHeight="250dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/suicideSquadImgBtn"
        app:layout_constraintTop_toBottomOf="@+id/imageButton9"
        app:srcCompat="@drawable/_the_last_mercenary" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="2dp"
        android:background="@color/darkPrimaryColor"
        android:text="@string/infinite"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infiniteImgBtn" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="45dp"
        android:background="@color/darkPrimaryColor"
        android:text="@string/infinite_release_date"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageButton8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="29dp"
        android:background="@color/darkPrimaryColor"
        app:tint="@color/greenColor"
        app:layout_constraintBottom_toTopOf="@+id/suicideSquadImgBtn"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/infiniteImgBtn"
        app:srcCompat="@android:drawable/star_off" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="29dp"
        android:background="@color/darkPrimaryColor"
        android:text="@string/infinite_rating"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/suicideSquadImgBtn"
        app:layout_constraintStart_toEndOf="@+id/imageButton8"
        app:layout_constraintTop_toBottomOf="@+id/infiniteImgBtn" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="171dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="1dp"
        android:background="@color/darkPrimaryColor"
        android:text="@string/blackWidow"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/blackWidowImgBtn" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginBottom="29dp"
        android:background="@color/darkPrimaryColor"
        android:text="@string/blackWidow_release_date"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lastMercenaryImgBtn"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="12dp"
        android:background="@color/darkPrimaryColor"
        app:tint="@color/greenColor"
        app:layout_constraintEnd_toStartOf="@+id/textView14"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/blackWidowImgBtn"
        app:srcCompat="@android:drawable/star_off" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="27dp"
        android:background="@color/darkPrimaryColor"
        android:text="@string/blackWidow_rating"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lastMercenaryImgBtn"
        app:layout_constraintStart_toEndOf="@+id/imageButton9"
        app:layout_constraintTop_toBottomOf="@+id/blackWidowImgBtn" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="3dp"
        android:background="@color/darkPrimaryColor"
        android:text="@string/suicideSquad"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suicideSquadImgBtn" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="16dp"
        android:background="@color/darkPrimaryColor"
        android:text="@string/suicideSquad_release_date"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="18dp"
        android:background="@color/darkPrimaryColor"
        app:tint="@color/greenColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/suicideSquadImgBtn"
        app:srcCompat="@android:drawable/star_off" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="18dp"
        android:background="@color/darkPrimaryColor"
        android:text="@string/suicideSquad_rating"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton10"
        app:layout_constraintTop_toBottomOf="@+id/suicideSquadImgBtn" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="57dp"
        android:background="@color/darkPrimaryColor"
        android:text="@string/lastMercenary"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/lastMercenaryImgBtn" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="47dp"
        android:layout_marginBottom="16dp"
        android:background="@color/darkPrimaryColor"
        android:text="@string/lastMercenary_release_date"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageButton
        android:id="@+id/imageButton11"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="15dp"
        android:background="@color/darkPrimaryColor"
        app:tint="@color/greenColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/star_off" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="15dp"
        android:background="@color/darkPrimaryColor"
        android:text="@string/lastMercenary_rating"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton11"
        app:layout_constraintTop_toBottomOf="@+id/lastMercenaryImgBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>
